feat: implement free cloud deployment strategy (GitHub Actions + UI updates)

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ STRIPE_SECRET_KEY="sk_test_xxx"
 STRIPE_PUBLIC_KEY="pk_test_xxx"
 RESEND_API_KEY="re_xxx"
 REDIS_URL="redis://:password@redis-host:6379"
+OPENAI_API_KEY="sk-..."
+GOOGLE_API_KEY="AI..."
