--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "1.0.6",
+    "@google/generative-ai": "^0.24.1",
     "@prisma/client": "5.x",
+    "@xenova/transformers": "^2.17.2",
     "autoprefixer": "^10.4.21",
     "axios": "1.7.0",
     "bcryptjs": "2.4.3",
@@ -28,14 +30,17 @@
     "dotenv": "^16.4.0",
     "embedded-postgres": "^17.6.0-beta.15",
     "jsonwebtoken": "9.0.0",
+    "lemonsqueezy.ts": "^0.1.8",
     "lucide-react": "^0.554.0",
     "next": "14.2.10",
     "next-auth": "^4.24.13",
+    "openai": "^6.9.1",
     "playwright": "^1.56.1",
     "prisma": "5.x",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "resend": "2.0.0",
+    "rss-parser": "^3.13.0",
     "stripe": "14.0.0",
     "tailwindcss": "3.x",
     "zod": "^4.1.13"
