--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "lint": "next lint",
     "test": "vitest",
     "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@auth/prisma-adapter": "1.0.6",
