--- a/package.json
+++ b/package.json
@@ -22,14 +22,17 @@
   "dependencies": {
     "@auth/prisma-adapter": "1.0.6",
     "@google/generative-ai": "^0.24.1",
+    "@headlessui/react": "^2.2.9",
     "@prisma/client": "5.x",
     "@xenova/transformers": "^2.17.2",
     "autoprefixer": "^10.4.21",
     "axios": "1.7.0",
     "bcryptjs": "2.4.3",
+    "cloudinary": "^2.8.0",
     "date-fns": "3.6.0",
     "dotenv": "^16.4.0",
     "embedded-postgres": "^17.6.0-beta.15",
+    "formidable": "^3.5.4",
     "jsonwebtoken": "9.0.0",
     "lemonsqueezy.ts": "^0.1.8",
     "lucide-react": "^0.554.0",
