--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
+    "@types/formidable": "^3.4.6",
     "@types/react": "19.2.2",
     "@vitejs/plugin-react": "^5.1.1",
     "jsdom": "^27.2.0",
