--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
     {
       "path": "/api/cron/crawl",
       "schedule": "0 4 * * *"
+    },
+    {
+      "path": "/api/cron/discovery",
+      "schedule": "0 10 * * *"
     }
   ]
 }
