--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "lucide-react": "^0.554.0",
     "next": "14.2.10",
     "next-auth": "^4.24.13",
-    "openai": "^6.9.1",
+    "p-limit": "^7.2.0",
     "playwright": "^1.56.1",
     "prisma": "5.x",
     "react": "18.2.0",
